<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/image_description"
            android:id="@+id/image_theater"
            android:src="@drawable/theatre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/global_padding"
            android:orientation="vertical"
            tools:context="com.example.android.moviesquiz.Quiz">

            <TextView
                android:id="@+id/question_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/breakingBadChecked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breaking_bad" />

                <RadioButton
                    android:id="@+id/friendsChecked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friends" />

                <RadioButton
                    android:id="@+id/gameOfThronesChecked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_of_thrones" />

                <RadioButton
                    android:id="@+id/madMenChecked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mad_men" />
            </RadioGroup>

            <TextView
                android:id="@+id/question_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_before_new_question"
                android:text="@string/question_2"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/laLaLandChecked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/la_la_land" />

            <CheckBox
                android:id="@+id/spotlightChecked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spotlight" />

            <CheckBox
                android:id="@+id/deadpoolChecked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deadpool" />

            <CheckBox
                android:id="@+id/revenantChecked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/the_revenant" />

            <TextView
                android:id="@+id/question_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_before_new_question"
                android:text="@string/question_3"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/titanicEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_3_hint"
                android:imeOptions="actionDone"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:textSize="@dimen/editText_text_size" />

            <TextView
                android:id="@+id/question_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_before_new_question"
                android:text="@string/question_4"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/question4True"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/true_1" />

                <RadioButton
                    android:id="@+id/question4False"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/false_0" />
            </RadioGroup>

            <TextView
                android:id="@+id/question_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_before_new_question"
                android:text="@string/question_5"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/question5True"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/true_1" />

                <RadioButton
                    android:id="@+id/question5False"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/false_0" />
            </RadioGroup>

            <TextView
                android:id="@+id/question_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_before_new_question"
                android:text="@string/question_6"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/question6True"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/true_1" />

                <RadioButton
                    android:id="@+id/question6False"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/false_0" />
            </RadioGroup>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/submit_button_top_margin"
                android:onClick="submitButtonClicked"
                android:text="@string/submit_answers" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>